feat：结构优化，无逻辑改动

--- a/common-hello/src/main/resources/reflection.properties
+++ b/common-hello/src/main/resources/reflection.properties
@@ -1,4 +1,4 @@
 
 #reflection
-classPathName = org.example.common.classLoader.SwapTestBean
+classPathName = org.example.common.bean.classLoader.SwapClassBean
 methodName = hi
