feat：修改目录名称

--- a/common-hello/src/main/resources/reflection.properties
+++ b/common-hello/src/main/resources/reflection.properties
@@ -1,4 +1,4 @@
 
 #reflection
-classPathName = org.example.common.bean.classLoader.SwapClassBean
+classPathName = org.example.common.bean.clazz.loader.SwapClassBean
 methodName = hi
